fix table horizontal scroll
and decrease edit image margin

--- a/mysite/expertise/static/expertise/style.css
+++ b/mysite/expertise/static/expertise/style.css
@@ -41,6 +41,10 @@ div.content-no-scroll {
     height: 90vh;
 }
 
+table.table.persons-table {
+    overflow-x: clip;
+}
+
 table.table.persons-table th {
     position: sticky;
     top: 0;
